# swun

./: CMakeLists.txt  ChangeLog  INFO.txt  LICENSE.txt  ProjectHome.md  README  README.md  index.html  params.json  swun.desktop  swun.sh
images/: newupdates.xcf  packages.xcf  unknown.xcf  uptodate.xcf
man/: swun.1
res/: swun.qrc
slack/: README  doinst.sh  slack-desc  swun.SlackBuild  swun.SlackBuild.direct  swun.info
src/: MainWindow.cpp  MainWindow.h  PackageBackend.h  SlackPKG.cpp  SlackPKG.h  main.cpp
